# BenchMarker

./: CMakeLists.txt  benchmarker.h  benchmarker.tpp  main.cpp
CPUKernelManager/: kernel.cpp  kernel.h
GPUKernelManager/: kernel.cu  kernel.h
